--- a/SpoofDetection/app/build.gradle
+++ b/SpoofDetection/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'de.undercouch.download'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
     defaultConfig {
-        applicationId "org.tensorflow.lite.examples.soundclassifier"
+        applicationId "si.uniljfri.arp1.spoofdetection"
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -47,7 +47,7 @@ project.ext.ASSET_DIR = projectDir.toString() + '/src/main/assets'
 
 // Download default models; if you wish to use your own models then
 // place them in the "assets" directory and comment out below line.
-apply from: 'download_model.gradle'
+//apply from: 'download_model.gradle'
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
